bugs fixes and added loitering module.
